
user and channel names are now case insensitive

internal library size is now stored in kilobytes to avoid rounding errors

endian checking was rewritten to be more portable

changed user levels to leech, user, moderator, admin, elite

added support for the wallop command (627)

added support for ban, unban and banlist (612, 614, 615, 616, 629)

Changes from 0.07
=================

added support for the 218-221 numerics

DOS filenames need to be quoted when submitting sql queries

set SO_REUSEADDR on the main server socket

fixed off-by-1 error in patchnap.c

fixed downloads to follow the correct sequence.  server should not send the
204 message to the downloader until recieving the 608 response from the
uploader

added support for downloading from firewalled clients (500,501)

search patterns need to have %, ', _ and \ quoted in the SQL query

login() did not set the ->host field of the USER struct, so downloads
between machines would fail.

added 10013 message type for transmitting the ip address of locally
connected machines to peer servers

Changes from 0.06
=================

removed spynap and spyserv from build list.

included patchnap.c for patching the linux nap client

Changes from 0.05
=================

fixed assertion in add_array() when adding to an empty array

search strings now convert spaces to % for SQL queries to allow searching
for multiple words.

server was reporting total library size in MB, not GB

each connection now has its own input buffer, dynamically allocated, so that
we can use nonblocking read() calls

added support for change data port command (703)

Changes from 0.04
=================

added support for resume searches (215, 216-217)

Changes from 0.03
=================
added support for channel user list (825/830).

added support for ping/pong (751/752).

fixed broken channel list (618) message

added channel list terminator message (617)

Changes from 0.02
=================